Highlight_interlanguage_links_for_Wikipedia.user.css
/* Highlight interlanguage links for Wikipedia */
@namespace url("http://www.w3.org/1999/xhtml");

@-moz-document domain("wikipedia.org") {
  #p-lang :is(.interwiki-en, .interwiki-ja) a {
    color: #fff !important;
    font: 1.2rem/1 sans-serif !important;
    text-align: center !important;
    text-decoration: none !important;
    padding: 0.5rem !important;
    background: #fa0 !important;
    position: fixed !important;
    top: 0 !important;
    left: 11rem !important;
    display: block !important;
    width: 32rem !important;
    border-radius: 0 0 0.5rem 0.5rem !important;
    white-space: nowrap !important;
    overflow: hidden !important;
    text-overflow: ellipsis !important;
    z-index: 255 !important;
  }
  #p-lang :is(.interwiki-en, .interwiki-ja) a::after {
    content: " \bb\a0 " attr(title);
  }
  #p-lang :is(.interwiki-en, .interwiki-ja) a:hover {
    background: #f70 !important;
  }

  :target {
    font-weight: bold !important;
    position: relative !important;
  }
  :target::before, :target::after {
    content: 'x';
    display: block;
    top: -2.4rem;
    position: absolute;
    visibility: hidden;
  }
}

